--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 06 16:31:54 GMT+07:00 2023
-sdk.dir=D\:\\Stuff\\Programming\\legacy-android-sdk
+#Fri Oct 06 09:41:09 GMT+07:00 2023
+sdk.dir=D\:\\Android\\SDK\\2023
